--- a/ControlesEnsalamento/Views/Shared/_Layout.cshtml
+++ b/ControlesEnsalamento/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    @*<div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="nav nav-tabs nav-justified">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -30,7 +30,62 @@
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
-    </div>
+    </div>*@
+    <nav class="navbar navbar-default" style="margin-top:-50px;">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                @*<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>*@
+                <a class="navbar-brand" href="#">@Html.ActionLink("Cadastro de Ensalamento", "Index", "Home", null, new { @class = "navbar-brand" })</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    @*<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+                        <li><a href="#">Link</a></li>*@
+                    @*<li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Rodar Testes Agora<span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">BNE HOM</a></li>
+                                <li><a href="#">SINE HOM</a></li>
+                                <li><a href="#">Trabaje HOM</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="#">BNE PRD</a></li>
+                                <li><a href="#">SINE PRD</a></li>
+                                <li><a href="#">Trabaje PRD</a></li>
+                            </ul>
+                        </li>*@
+                </ul>
+                @*<form class="navbar-form navbar-left">
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Search">
+                        </div>
+                        <button type="submit" class="btn btn-default">Submit</button>
+                    </form>*@
+                <ul class="nav navbar-nav navbar-right">
+                    @*<li><a href="#">Link</a></li>*@
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Consulta Ensalamento", "List", "Ensalamento")</li>
+                            <li>@Html.ActionLink("Consulta Professores", "List", "Professores")</li>
+                            <li role="separator" class="divider"></li>   
+                            <li>@Html.ActionLink("Consulta Salas", "List", "Salas")</li>
+                            <li>@Html.ActionLink("Consulta Turmas", "List", "Turmas")</li>
+                            <li role="separator" class="divider"></li>   
+                            <li>@Html.ActionLink("Outras Consultas", "Contact", "Home")</li>                                        
+                        </ul>
+                    </li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
     <div class="container body-content">
         @RenderBody()
         <hr />
